# wormhole-lite

./: .gitignore  Cargo.toml  README.md  verify_signature.rs
evm/: foundry.toml
evm/contracts/: WormholeLite.sol
evm/contracts/interfaces/: IERC20.sol  IWormhole.sol
solana/: Cargo.toml
solana/src/: lib.rs  message_payload.rs
solana/src/client/: mod.rs  secp256k1_helpers.rs  vaa_verification_bundle.rs
solana/src/instructions/: create_emitter.rs  mod.rs  post_vaa.rs  send_message.rs  verify_message.rs  verify_signature.rs
solana/src/state/: emitter.rs  mod.rs  vaa.rs
solana/src/utils/: chain.rs  derivations.rs  mod.rs
src/: lib.rs
