[package]
name = "wormhole-solana-lite"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.solana-program]
version = "1.16"
[dependencies.wormhole-anchor-sdk]
version = "0.1.0-alpha.2"
[dependencies.wormhole-core-bridge-solana]
version = "0.0.0-alpha.6"
[dependencies.arrayref]
version = "0.3.7"
[dependencies.borsh]
version = "0.10"
[dependencies.sha3]
version = "0.10"
[dev-dependencies.hex]
version = "0.4"