[package]
name = "wormhole-solana-lite"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


# disbale the default features if you only want to use this crate on-chain
[features]
default = ["client"]
client = ["tokio", "wormhole-explorer-client", "solana-client", "solana-sdk", "anyhow"]

[dependencies.solana-program]
version = "1.16"
[dependencies.wormhole-anchor-sdk]
version = "0.1.0-alpha.2"
[dependencies.wormhole-core-bridge-solana]
version = "0.0.0-alpha.6"
[dependencies.arrayref]
version = "0.3.7"
[dependencies.borsh]
version = "0.10"
[dependencies.sha3]
version = "0.10"
[dependencies.bincode]
version = "1"
[dependencies.tokio]
optional = true
version = "1"
features = ["full", "parking_lot"]
[dependencies.wormhole-explorer-client]
optional = true
git = "https://github.com/wormhole-foundation/wormhole-sdk-rs"
[dependencies.solana-client]
optional = true
version = "1.16"
[dependencies.solana-sdk]
optional = true
version = "1.16"
[dependencies.anyhow]
optional = true
version = "1"
[dependencies.serde]
version = "1"
feateures = ["derive"]
[dependencies.thiserror]
version = "1"
[dev-dependencies.hex]
version = "0.4"
